--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -224,6 +224,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702092323274_Roles.cs" />
+    <Compile Include="Migrations\201702092323274_Roles.Designer.cs">
+      <DependentUpon>201702092323274_Roles.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\Contact.cs" />
@@ -235,6 +240,11 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\backgroundimage18.jpg" />
+    <Content Include="Content\backgroundimage22.jpg" />
+    <Content Include="Content\backgroundimage28.jpg" />
+    <Content Include="Content\backgroundimage29.jpg" />
+    <Content Include="Content\backgroundimage32.jpg" />
     <Content Include="Content\bootstrap-journal.css" />
     <Content Include="Content\bootstrap-journal.min.css" />
     <Content Include="Content\bootstrap-readable.css" />
@@ -321,6 +331,11 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201702092323274_Roles.resx">
+      <DependentUpon>201702092323274_Roles.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
