--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -255,6 +255,7 @@
     <Content Include="Content\bootstrap-spacelab.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\forbiddenimage.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -320,9 +321,11 @@
     <Content Include="Views\Subjects\Details.cshtml" />
     <Content Include="Views\Subjects\Edit.cshtml" />
     <Content Include="Views\Subjects\Index.cshtml" />
-    <Content Include="Views\Account\ManageUser.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Subjects\InsuranceForm.cshtml" />
     <Content Include="Views\Subjects\ConsentFormModel.cshtml" />
+    <Content Include="Views\Account\Forbidden.cshtml" />
+    <Content Include="Views\Account\UserDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
