--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NewFunctionTestsController.cs" />
     <Compile Include="Controllers\PDFtestClassController.cs" />
+    <Compile Include="Controllers\SignaturesController.cs" />
     <Compile Include="Controllers\SubjectsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -237,6 +238,7 @@
     <Compile Include="Models\MyDummyModel.cs" />
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\PDFtestClass.cs" />
+    <Compile Include="Models\Signature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -332,6 +334,12 @@
     <Content Include="Views\Account\UserDetails.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\SignaturePad.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\SignaturePad.cshtml" />
+    <Content Include="Views\PDFtestClass\Index2.cshtml" />
+    <Content Include="Views\Signatures\Create.cshtml" />
+    <Content Include="Views\Signatures\Delete.cshtml" />
+    <Content Include="Views\Signatures\Details.cshtml" />
+    <Content Include="Views\Signatures\Edit.cshtml" />
+    <Content Include="Views\Signatures\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
