--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -97,6 +97,10 @@
       <HintPath>..\packages\RazorEngine.3.9.3\lib\net45\RazorEngine.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Rotativa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.1.6.4\lib\net40\Rotativa.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -219,7 +223,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NewFunctionTestsController.cs" />
-    <Compile Include="Controllers\PDFtestClassController.cs" />
     <Compile Include="Controllers\SignaturesController.cs" />
     <Compile Include="Controllers\SubjectsController.cs" />
     <Compile Include="Global.asax.cs">
@@ -235,10 +238,10 @@
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\MyDummyModel.cs" />
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\PDFtestClass.cs" />
     <Compile Include="Models\Signature.cs" />
+    <Compile Include="Models\SOAP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -263,6 +266,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Rotativa\wkhtmltopdf.exe" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -270,6 +274,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="App_Browsers\qt.browser" />
+    <Content Include="Content\PDFforInsuranceForm.pdf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -319,7 +325,6 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\PDFtestClass\Index.cshtml" />
     <Content Include="Views\NewFunctionTests\Index.cshtml" />
     <Content Include="Views\NewFunctionTests\OptionalParamater.cshtml" />
     <Content Include="Views\Subjects\Create.cshtml" />
@@ -334,12 +339,16 @@
     <Content Include="Views\Account\UserDetails.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\SignaturePad.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\SignaturePad.cshtml" />
-    <Content Include="Views\PDFtestClass\Index2.cshtml" />
     <Content Include="Views\Signatures\Create.cshtml" />
     <Content Include="Views\Signatures\Delete.cshtml" />
     <Content Include="Views\Signatures\Details.cshtml" />
     <Content Include="Views\Signatures\Edit.cshtml" />
     <Content Include="Views\Signatures\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutwithoutNavigation.cshtml" />
+    <Content Include="Views\NewFunctionTests\Index1.cshtml" />
+    <Content Include="Views\Subjects\Soap.cshtml" />
+    <Content Include="Views\Subjects\Insurance.cshtml" />
+    <Content Include="Views\Subjects\PersonalInformation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
