--- a/BA Portal/packages.config
+++ b/BA Portal/packages.config
@@ -42,6 +42,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="RazorEngine" version="3.9.3" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Rotativa" version="1.6.4" targetFramework="net452" />
   <package id="signaturepad" version="1.5.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
