--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -283,6 +283,7 @@
     </Content>
     <Content Include="App_Browsers\qt.browser" />
     <Content Include="Content\PDFforInsuranceForm.pdf" />
+    <Content Include="Content\PDFforPersonalInformation.pdf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -356,6 +357,8 @@
     <Content Include="Views\Subjects\Soap.cshtml" />
     <Content Include="Views\Subjects\Insurance.cshtml" />
     <Content Include="Views\Subjects\PersonalInformation.cshtml" />
+    <Content Include="Views\Signatures\Test.cshtml" />
+    <Content Include="Views\Signatures\GeneratePDFforSignature.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
