--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -606,6 +606,7 @@
     <Content Include="Views\Signatures\GetDoctorSignatureSOAP.cshtml" />
     <Content Include="Views\Calendar\Index.cshtml" />
     <Content Include="Views\PDFs\file.cshtml" />
+    <Content Include="Views\Account\Upgrade.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
