--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -325,6 +325,7 @@
     <Content Include="Content\Paying.pdf" />
     <Content Include="Content\FinancialPolicy.pdf" />
     <Content Include="Content\PDFSoap.pdf" />
+    <None Include="Properties\PublishProfiles\account.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\DayPilot\daypilot-all.min.js" />
     <Content Include="Scripts\dhtmlxScheduler\dhtmlxscheduler.css" />
