Various changes to soapform including multilists
Various changes to soapform including multilists

--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -665,6 +665,7 @@
     <Content Include="Views\Account\Upgrade.cshtml" />
     <Content Include="Views\NewFunctionTests\exceptionthrower.cshtml" />
     <Content Include="Views\Home\Help.cshtml" />
+    <Content Include="Views\SOAPForms\PatientSOAPIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
