--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -673,6 +673,7 @@
     <Content Include="Views\InsuranceInfoes\Edit.cshtml" />
     <Content Include="Views\InsuranceInfoes\Index.cshtml" />
     <Content Include="Views\InsuranceInfoes\PatientInsuranceIndex.cshtml" />
+    <Content Include="Views\Account\AdminResetPassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
