Timer that prevents logout
IIS idle timeout on shared host is 5 minutes. Timer that prevents this
time out has been implemented.

--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -288,9 +288,9 @@
       <DependentUpon>keepAlive.ashx</DependentUpon>
     </Compile>
     <Compile Include="Handlers\KeepAlive.cs" />
-    <Compile Include="Migrations\201706041221229_InitialMigrations.cs" />
-    <Compile Include="Migrations\201706041221229_InitialMigrations.Designer.cs">
-      <DependentUpon>201706041221229_InitialMigrations.cs</DependentUpon>
+    <Compile Include="Migrations\201706080942505_initial.cs" />
+    <Compile Include="Migrations\201706080942505_initial.Designer.cs">
+      <DependentUpon>201706080942505_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -570,6 +570,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\SessionUpdater2.js" />
     <Content Include="Scripts\SessionUpdater.js" />
     <Content Include="Scripts\SignaturePadInit.js" />
     <Content Include="Scripts\signature_pad.js" />
@@ -693,6 +694,7 @@
     <Content Include="Views\InsuranceVerifications\PatientInsuranceIndex.cshtml" />
     <Content Include="Views\Test\TESTFORM3.cshtml" />
     <Content Include="Views\PDFs\TakeAnotherAction_InsuranceInfo.cshtml" />
+    <None Include="Views\Home\SessionCheck.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
@@ -709,8 +711,8 @@
     <Folder Include="PDF_handler\Scans\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706041221229_InitialMigrations.resx">
-      <DependentUpon>201706041221229_InitialMigrations.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706080942505_initial.resx">
+      <DependentUpon>201706080942505_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
