--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -354,6 +354,7 @@
     <Content Include="Content\logotiny.gif" />
     <Content Include="Content\logotransparent.gif" />
     <Content Include="Content\logoverytiny.gif" />
+    <Content Include="Content\SignatureOnFile.png" />
     <Content Include="dhxscheduler.sample.mvc3.readme.txt" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
