--- a/BA Portal/BA Portal.csproj
+++ b/BA Portal/BA Portal.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -318,10 +319,6 @@
     <Compile Include="Views\PractionerController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\CalendarDatabase.mdf" />
-    <Content Include="App_Data\CalendarDatabase_log.ldf">
-      <DependentUpon>CalendarDatabase.mdf</DependentUpon>
-    </Content>
     <Content Include="App_Data\Sample.mdf" />
     <Content Include="App_Data\Sample_log.ldf">
       <DependentUpon>Sample.mdf</DependentUpon>
